--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "plugins": ["prettier-plugin-tailwindcss"],
   "tailwindStylesheet": "./src/app/app.css",
   "semi": false,
-  "singleQuote": true,
+  "singleQuote": false,
   "tabWidth": 2,
   "trailingComma": "es5"
 }
