--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@react-router/node": "^7.6.3",
     "@react-router/serve": "^7.6.3",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "isbot": "^5.1.28",
@@ -22,6 +23,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.3",
+    "recharts": "2.15.4",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
