color swap logic improvements

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,6 @@
     "moduleResolution": "bundler",
     "jsx": "react-jsx",
     "rootDirs": [".", "./.react-router/types"],
-    "baseUrl": ".",
     "paths": {
       "src/*": ["./src/*"]
     },
@@ -21,8 +20,6 @@
     "verbatimModuleSyntax": true,
     "noEmit": true,
     "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "ignoreDeprecations": "6.0"
+    "skipLibCheck": true
   }
 }
